# tuvetia

./: .env.example  .gitignore  .mcp.json  CALENDARIO.md  CLAUDE.md  DATABASE.md  ESTADO.md  README.md  SETUP.md  WHATSAPP.md  package-lock.json  package.json  pyproject.toml  vercel.json
athos-service/: .env.example  .gitignore  .mcp.json  CLAUDE.md  DEPLOY.md  SETUP.md  pyproject.toml  railway.json  requirements.txt  vercel.json
athos-service/.github/workflows/: ci.yml
athos-service/api/: index.py
athos-service/app/: auth.py  chat.py  config.py  db.py  main.py  models.py  patient_context.py  phantom.py  transcription.py
athos-service/app/generation/: allergy_gate.py  citations.py  condition_alerts.py  generate.py  llm_client.py
athos-service/app/glossary/: resolve.py  seed.py
athos-service/app/retrieval/: cascade.py  query_builder.py
athos-service/app/trace/: logs.py
athos-service/docs/: ATHOS_CONTEXTO_EQUIPO.md  MIGRACIONES.md  athos-estado.html  mockup-chat-copiloto.html  mockup-nota-athos.html  tuvetia_presentacion.html  tuvetia_rag_documento_final.md
athos-service/scripts/: eval_golden.py
athos-service/supabase/bootstrap/: 000_base_schema.sql
athos-service/supabase/migrations/: 0002_vector_index_hnsw.sql  0003_tier1_mesh_gin_index.sql  0004_clinical_notes_alerts.sql  0006_appointment_rpcs.sql  (+13 more)
athos-service/tests/: test_allergy_gate.py  test_cascade.py  test_chat.py  test_citations.py  test_condition_alerts.py  test_generation.py  test_golden.py  test_ingestion.py  test_llm_client.py  test_phantom.py  test_query_builder.py  test_transcription.py
(+115 files in other folders)
